pedigree/src/main/resources/pedigree/editor.css
/* ... */
.node-type-options .node-type-option {
  background: transparent none center center no-repeat;
  border: 1px solid #F5F5F5;
  border-radius: 4px;
  display: inline-block;
  margin: 3px;
  height: 24px;
  width: 24px;
  box-shadow: 0 0 9px #DDDDDD inset;
  color: black !important;
  vertical-align: middle;
  text-decoration: none !important;
 /*
  TODO: Keep this:
  overflow: hidden;
  text-indent: 48px;
  line-height: 48px;
  font-size: 1px;
  TODO: remove this
  */
  text-align: center;
  line-height: 24px;
}
/* The unicode symbols we use for different node types have disproportionate sizes.
   Adjusting the font size for a cleaner look:
*/
.fa-rotate-45 {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
  display: inline-block !important;
  font-size: 90%;
}
.expand-arrow {
  cursor: pointer;
  font-size: 15px;
  margin-left: -1px;
  margin-right: 2px;
}
.expand-arrow:hover {
  color: #6666CC;
}
.node-type-options .expandable-node-type-option {
    background: transparent none center center no-repeat;
    border: 1px solid #F5F5F5;
    border-radius: 4px;
    display: inline-block;
    margin: 3px;
    height: 24px;
    width: 24px;
    box-shadow: 0 0 9px #DDDDDD inset;
    color: black !important;
    vertical-align: middle;
    text-decoration: none !important;
    /*
    TODO: Keep this:
    overflow: hidden;
    text-indent: 48px;
    line-height: 48px;
    font-size: 1px;
    TODO: remove this
    */
    text-align: center;
    line-height: 24px;
}
.node-type-options-extended * {
    vertical-align: middle;
}

.value-control-button {
  border: 1px solid #FFF;
  border-radius: 3px;
  box-shadow: 0 0 5px #DDD inset;
  cursor: pointer;
  display: inline-block;
  font-size: 1.1em;
  font-weight: bold;
  height: 1em;
  line-height: 1em;
  margin: 3px;
  padding: 3px;
  text-align: center;
  width: 1em;
}
.minus-button {
  color: #C00;
}

.plus-button {
  color: #080;
}

.msdialog-modal-container .pedigree-template-chooser {
    width: 500px;
}
.picture-box {
    display: inline-block;
    box-shadow: rgba(0, 0, 0, 0.5) 0 0 5px 2px;
    margin: 10px;
}
.picture-box:hover {
    cursor: pointer;
    box-shadow: rgba(0, 10, 0, 0.5) 0 0 5px 4px;
}

.template-picture-container {
    display: inline-block;
    margin: 3px;
}

.msdialog-box {
    /*overflow:auto;*/
    width: 650px;
}
.msdialog-box .content {
    text-align: center;
}
.no-mouse-interaction {
    pointer-events: none;
}
/* Make sure the tooltips fit nicely in the suggest box in the pedigree editor: */
.suggestItem .xTooltip {
  left: 4px;
  margin: 1.4em 0 0;
}

/* TODO: add icons to each option type:
.node-type-options .node-type-M {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-F {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-U {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-T {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-m {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-i {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-n {
  background-image: url("$xwiki.getSkinFile('.png')");
}
*/

/* Datepicker style */
.fuzzy-date-picker {
  margin-right: -2px;
}
.fuzzy-date-picker .year {
  font-size: 14px;
}
.fuzzy-date-picker .month {
  font-size: 14px;
}
.fuzzy-date-picker .day {
  font-size: 14px;
}
.fuzzy-date-picker .empty {
  font-size: .7em;
  opacity: .5;
}
.fuzzy-date-picker .year option {
  /*text-indent: 1em;*/
}
.fuzzy-date-picker .year .decade {
  font-weight: bold;
  /*text-indent: 0;*/
}

